# VectorTrainer

./: .gitignore  .vectorwave_functions_cache.json  ADR.md  DEMO_SCENARIO_TECHNICAL_SPEC.json  PLAN.md  README.md  SPEC.md  USAGE.md  demo.py  demo_real.py  pyproject.toml  streamlit_app.py
api/: __init__.py  deps.py  main.py  routes.py  schemas.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/feedback/: page.tsx
frontend/src/app/fine-tuning/: page.tsx
frontend/src/app/golden-data/: page.tsx
frontend/src/app/hook-script/: page.tsx
frontend/src/app/rules/: page.tsx
frontend/src/components/: header.tsx  metric-card.tsx  sidebar.tsx  stage-flow.tsx
frontend/src/lib/: api.ts  types.ts
src/vector_trainer/: __init__.py  cost_guard.py  dashboard.py  extractor.py  pipeline.py  synthesizer.py  types.py
tests/: test_vector_trainer.py
