[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-trainer"
version = "0.1.0"
description = "Self-Evolving AI Loop engine: density-based golden data selection and automatic criteria synthesis for LLM fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "junyeonggim", email = "junyeonggim5@gmail.com"},
]
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.30.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
